Add unbound to matrix